@@ -149,7 +149,8 @@ final class IndexFileDeleter {
 
     for (String fileName : files) {
 
-      if (!fileName.endsWith("write.lock") && !fileName.equals(IndexFileNames.SEGMENTS_GEN)) {
+      if (!fileName.endsWith("write.lock") && !fileName.equals(IndexFileNames.SEGMENTS_GEN)
+          && (fileName.startsWith("_") || fileName.startsWith(IndexFileNames.SEGMENTS))) {
 
         // Add this file to refCounts with initial count 0:
         getRefCount(fileName);
